--- a/scripts/install
+++ b/scripts/install
@@ -20,7 +20,7 @@ download() {
   }
   rm -f "$TAR_FILE"
   curl -s -L -o "$TAR_FILE" \
-    "$RELEASES_URL/download/$VERSION/nem_$(uname -s)_$(uname -m).tar.gz"
+    "$RELEASES_URL/download/$VERSION/nem-toolchain_$(uname -s)_$(uname -m).tar.gz"
 }
 
 download
