--- a/scripts/install
+++ b/scripts/install
@@ -12,17 +12,14 @@ last_version() {
     rev
 }
 
-download() {
-  test -z "$VERSION" && VERSION="$(last_version)"
-  test -z "$VERSION" && {
-    echo "Unable to get nem-toolchain version." >&2
-    exit 1
-  }
-  rm -f "$TAR_FILE"
-  curl -s -L -o "$TAR_FILE" \
-    "$RELEASES_URL/download/$VERSION/nem-toolchain_$(uname -s)_$(uname -m).tar.gz"
+test -z "$VERSION" && VERSION="$(last_version)"
+test -z "$VERSION" && {
+echo "Unable to get nem-toolchain version." >&2
+exit 1
 }
 
-download
+rm -f "$TAR_FILE"
+curl -s -L -o "$TAR_FILE" \
+"$RELEASES_URL/download/$VERSION/nem-toolchain_$(uname -s)_$(uname -m).tar.gz"
 tar -xf "$TAR_FILE" -C "$TMPDIR"
-"${TMPDIR}/nem"
+export PATH="$PATH:$TMPDIR"
