Wrong script format
Fix it.

--- a/scripts/install
+++ b/scripts/install
@@ -17,7 +17,8 @@ test -z "$VERSION" && {
   exit 1
 }
 
-test -z "$TMPDIR" && TMPDIR="$(mktemp -d)" && rm -f "$TAR_FILE"
+test -z "$TMPDIR" && TMPDIR="$(mktemp -d)"
+rm -f "$TAR_FILE"
 curl -s -L -o "$TAR_FILE" \
   "$RELEASES_URL/download/$VERSION/nem-toolchain_$(uname -s)_$(uname -m).tar.gz"
 
