--- a/scripts/install
+++ b/scripts/install
@@ -3,7 +3,6 @@ set -e
 
 TAR_FILE="/tmp/nem.tar.gz"
 RELEASES_URL="https://github.com/nem-toolchain/nem-toolchain/releases"
-test -z "$TMPDIR" && TMPDIR="$(mktemp -d)"
 
 last_version() {
   curl -sL -o /dev/null -w %{url_effective} "$RELEASES_URL/latest" |
@@ -12,17 +11,16 @@ last_version() {
     rev
 }
 
-download() {
-  test -z "$VERSION" && VERSION="$(last_version)"
-  test -z "$VERSION" && {
-    echo "Unable to get nem-toolchain version." >&2
-    exit 1
-  }
-  rm -f "$TAR_FILE"
-  curl -s -L -o "$TAR_FILE" \
-    "$RELEASES_URL/download/$VERSION/nem-toolchain_$(uname -s)_$(uname -m).tar.gz"
+test -z "$VERSION" && VERSION="$(last_version)"
+test -z "$VERSION" && {
+  echo "Unable to get nem-toolchain version." >&2
+  exit 1
 }
 
-download
+test -z "$TMPDIR" && TMPDIR="$(mktemp -d)"
+rm -f "$TAR_FILE"
+curl -s -L -o "$TAR_FILE" \
+  "$RELEASES_URL/download/$VERSION/nem-toolchain_$(uname -s)_$(uname -m).tar.gz"
+
 tar -xf "$TAR_FILE" -C "$TMPDIR"
-"${TMPDIR}/nem"
+export PATH="$PATH:$TMPDIR"
