--- a/scripts/install
+++ b/scripts/install
@@ -1,7 +1,10 @@
 #!/bin/sh
 set -e
 
-TAR_FILE="/tmp/nem.tar.gz"
+TMP_DIR="/tmp/nem"
+mkdir -p $TMP_DIR
+
+TAR_FILE="$TMP_DIR/nem.tar.gz"
 RELEASES_URL="https://github.com/nem-toolchain/nem-toolchain/releases"
 
 last_version() {
@@ -17,10 +20,8 @@ test -z "$VERSION" && {
   exit 1
 }
 
-test -z "$TMPDIR" && TMPDIR="$(mktemp -d)"
 rm -f "$TAR_FILE"
 curl -s -L -o "$TAR_FILE" \
   "$RELEASES_URL/download/$VERSION/nem-toolchain_$(uname -s)_$(uname -m).tar.gz"
 
-tar -xf "$TAR_FILE" -C "$TMPDIR"
-export PATH="$PATH:$TMPDIR"
+tar -xf "$TAR_FILE" -C "$TMP_DIR"
