--- a/scripts/install
+++ b/scripts/install
@@ -1,14 +1,12 @@
 #!/bin/sh
 set -e
 
-TAR_FILE="/tmp/nem.tar.gz"
+FILENAME="nem-toolchain_$(uname -s)_$(uname -m).tar.gz"
 RELEASES_URL="https://github.com/nem-toolchain/nem-toolchain/releases"
 
 last_version() {
   curl -sL -o /dev/null -w %{url_effective} "$RELEASES_URL/latest" |
-    rev |
-    cut -f1 -d'/'|
-    rev
+    rev | cut -f1 -d'/'| rev
 }
 
 test -z "$VERSION" && VERSION="$(last_version)"
@@ -18,9 +16,7 @@ test -z "$VERSION" && {
 }
 
 test -z "$TMPDIR" && TMPDIR="$(mktemp -d)"
-rm -f "$TAR_FILE"
-curl -sL -o "$TAR_FILE" \
-  "$RELEASES_URL/download/$VERSION/nem-toolchain_$(uname -s)_$(uname -m).tar.gz"
+curl -sL -o "$TMPDIR/$FILENAME" "$RELEASES_URL/download/$VERSION/$FILENAME"
 
-tar -xf "$TAR_FILE" -C "$TMPDIR"
-export PATH="$PATH:$TMPDIR"
+mkdir -p bin
+tar -xf "$TMPDIR/$FILENAME" -C "bin"
