--- a/scripts/install
+++ b/scripts/install
@@ -1,8 +1,7 @@
 #!/bin/sh
 set -e
 
-# FILENAME="nem-toolchain_$(uname -s)_$(uname -m).tar.gz"
-FILENAME="nem-toolchain_Linux_x86_64.tar.gz"
+FILENAME="nem-toolchain_$(uname -s)_$(uname -m).tar.gz"
 RELEASES_URL="https://github.com/nem-toolchain/nem-toolchain/releases"
 
 last_version() {
